# ColorFocus

./: .gitignore  CLAUDE.md  LICENSE  README.md  color-focus-prd.md  demo_puzzle.py  pyproject.toml  vercel.json
.claude/: settings.json
.claude/commands/: accessibility-audit.md  add-color.md  add-language.md  commit.md  deploy.md  investigate.md  pr.md  release.md  sync-check.md  test.md  verify.md
agent-os/: config.yml
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  puzzle.html  tailwind.config.js  tsconfig.json  vitest.config.ts
scripts/: generate-skills-from-standards.py  setup-agent-os.sh  supabase-schema.sql
shared/: COLOR_RESEARCH.md  color_labels.json  colors.json  ui_text.json
tests/: conftest.py  test_backend_color_constants_update.py  test_color_constants.py  test_color_tokens.py  test_configurable_grid_size.py  test_cross_platform_sync.py  test_donation_integration.py  test_dynamic_grid_font_scaling.py  test_font_size_calculation.py  test_footer_qr_section.py  test_grid_container_css.py  test_grid_scaling_additional.py  test_header_donation_link.py  test_json_structure_validation.py  test_mistake_identification.py  test_puzzle_data_structures.py  test_puzzle_generator.py  test_puzzle_generator_core.py  test_puzzle_generator_validation.py  test_python_color_constants.py  test_responsive_accessibility.py  test_responsive_integration.py  test_spanish_frontend.py  test_spanish_labels.py  test_spanish_language.py  test_stroop_optimization.py  test_ui_localization.py  test_ui_text.py  test_vietnamese_language.py
(+142 files in other folders)
